2017-06-22  Antoine Quint  <graouts@apple.com>

        REGRESSION: LayoutTest media/modern-media-controls/placard-support/placard-support-pip.html is a flaky timeout on Sierra
        https://bugs.webkit.org/show_bug.cgi?id=173725

        Reviewed by Dean Jackson.

        On WK1, this test enters fullscreen rather than PiP (which is unexpected, see webkit.org/b/173729) and thus the button
        to exit PiP could not be clicked. But we don't need a button click to exit PiP, so instead we just call a method to
        toggle it.

        * media/modern-media-controls/placard-support/placard-support-pip.html:

2017-06-22  Ryan Haddad  <ryanhaddad@apple.com>

        Mark perf/object-keys.html as flaky on iOS.
        https://bugs.webkit.org/show_bug.cgi?id=171617

        Unreviewed test gardening.

        * platform/ios/TestExpectations:

2017-06-22  Zalan Bujtas  <zalan@apple.com>

        REGRESSION(r214712): Infinite recursion in RenderTable::layout in paginated mode
        https://bugs.webkit.org/show_bug.cgi?id=173731
        <rdar://problem/32237775>

        Reviewed by Antti Koivisto.

        * fast/table/caption-bottom-with-pagination-expected.txt: Added.
        * fast/table/caption-bottom-with-pagination.html: Added.

2017-06-22  Ryan Haddad  <ryanhaddad@apple.com>

        Mark media/modern-media-controls/forward-button/forward-button.html as flaky on mac-wk1.
        https://bugs.webkit.org/show_bug.cgi?id=168265

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2017-06-22  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Pausing with a deep call stack can be very slow, avoid eagerly generating object previews
        https://bugs.webkit.org/show_bug.cgi?id=173698

        Reviewed by Matt Baker.

        * inspector/runtime/getPreview-expected.txt: Added.
        * inspector/runtime/getPreview.html: Added.
        Test the new protocol command `Runtime.getPreview` as well as the frontend