@@ -1,3 +1,13 @@
+2017-06-22  Youenn Fablet  <youenn@apple.com>
+
+        Add a test for multi data channel peer connection
+        https://bugs.webkit.org/show_bug.cgi?id=173735
+
+        Reviewed by Eric Carlson.
+
+        * webrtc/datachannel/multi-channel-expected.txt: Added.
+        * webrtc/datachannel/multi-channel.html: Added.
+
 2017-06-22  Antoine Quint  <graouts@apple.com>
 
         REGRESSION: LayoutTest media/modern-media-controls/placard-support/placard-support-pip.html is a flaky timeout on Sierra
